# WhisperLive

./: README.md  TensorRT_whisper.md  client.py  main.py  pyproject.toml  run_client.py  run_server.py  test.py
Audio-Transcription-Chrome/: options.html  popup.html  popup.js
Audio-Transcription-Firefox/: popup.html  popup.js
Audio-Transcription-iOS/: AudioWebSocket.swift
docs/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
tests/: test_client.py  test_server.py
whisper_live/: client.py  server.py
whisper_live/backend/: base.py  batch_manager.py  faster_whisper_backend.py  openvino_backend.py  parakeet_backend.py  tokenization_small100.py  translation_backend.py  trt_backend.py
whisper_live/transcriber/: transcriber_faster_whisper.py  transcriber_openvino.py  transcriber_tensorrt.py
