[project]
name = "whisperlive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "av",
    "diffusers>=0.35.1",
    "evaluate",
    "faster-whisper==1.1.0",
    "fastapi>=0.116.1",
    "jiwer",
    "librosa",
    "litserve>=0.2.15",
    "nemo-toolkit[asr]>=2.1.0",
    "numba",
    "numpy<2",
    "onnxruntime==1.17.0",
    "openai-whisper==20240930",
    "openvino",
    "openvino-genai",
    "openvino-tokenizers",
    "optimum",
    "optimum-intel",
    "protobuf>=6.32.0",
    "PyAudio",
    "scipy",
    "sentencepiece>=0.2.1",
    "soundfile",
    "tokenizers>=0.21.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]>=4.55.4",
    "uvicorn>=0.35.0",
    "websocket-client",
    "websockets",
    "ml-dtypes>=0.4.1",
]
