[project]
name = "whisperlive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "av",
    "diffusers",
    "evaluate",
    "faster-whisper",
    "fastapi",
    "jiwer",
    "librosa",
    "litserve",
    "nemo-toolkit[asr]",
    "numba",
    "numpy<2",
    "onnxruntime",
    "openai-whisper",
    "openvino",
    "openvino-genai",
    "openvino-tokenizers",
    "optimum",
    "optimum-intel",
    "protobuf",
    "PyAudio",
    "scipy",
    "sentencepiece",
    "soundfile",
    "tokenizers",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers[torch]",
    "uvicorn",
    "websocket-client",
    "websockets",
]